package Domain.Model;

public class Aula {
    private String nombre;
    private Curso curso;
}

