package Domain.Model;

import java.util.List;

public class CentroEducativo {
    private String nombre;
    private String direccion;
    private List<Curso> cursos;
    private List<Profesor> profesores;

}



