package Domain.Model;

public class Curso {
    private int id;
    private String nombre;
    private Profesor profesor;
    private Aula aula;
}

