package Domain.Model;

import java.util.Date;

public class Estudiante {
    private String nombre;
    private String apellidos;
    private String correo;
    private Date fecha_nacimiento;
}


