package Domain.Model;

public class Evaluacion {
    private String nombre;
    private Estudiante estudiante;
    private Profesor profesor;
    private Curso curso;
}

