package Domain.Model;

import java.util.Date;

public class Horario {
    private String nombre;
    private String evento;
    private Date fecha;
    private Curso curso;
}

