package Domain.Model;

public class Material {
    private String nombre;
    private Curso curso;
    private Profesor profesor;
}
