package Domain.Model;

import java.util.Date;

public class Profesor {
    private String nombre;
    private String apellidos;
    private String correo;
    private String especializacion;
    private Date fecha_nacimiento;

}

